--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "get-urls": "^7.0.0",
+    "m3u8-parser": "^3.0.0",
+    "ws": "^3.2.0"
   }
 }
